--- a/decouverte-du-miel/src/Components/ContactForm.css
+++ b/decouverte-du-miel/src/Components/ContactForm.css
@@ -2,15 +2,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #f8df0b;
 }
 
 .contactform-container {
   width: 40%;
-  background-color: red;
+  background-color: #efaf39;
   padding: 1.25em;
   margin-bottom: 50px;
   border-radius: 5px;
-  box-shadow: 5px 5px 5px blueviolet;
+  box-shadow: 5px 5px 5px #cc7000;
   font-size: 1.2em;
 }
 
@@ -21,7 +22,7 @@
 
 .contactform-title {
   padding-bottom: 20px;
-  color: dimgrey;
+  /*color: greenyellow;*/
   text-transform: uppercase;
 }
 
@@ -30,7 +31,7 @@
   background: transparent;
   border: none;
   outline: none;
-  border-bottom: 1px solid greenyellow;
+  border-bottom: 1px solid black;
   color: black;
   font-size: 18px;
   margin-bottom: 16px;
@@ -46,20 +47,20 @@
 
 .ContactForm input::placeholder,
 textarea::placeholder {
-  color: lightseagreen;
+  color: black;
 }
 
 .searchButton-form {
   align-self: flex-end;
   width: 100px;
-  box-shadow: inset 0px 1px 0px 0px #f7c5c0;
-  background: linear-gradient(to bottom, #e4685d 5%, #fc8d83 100%);
-  background-color: #fc8d83;
+  box-shadow: inset 0px 1px 0px 0px #f8df0b;
+  background: linear-gradient(to bottom, #f8df0b 5%, #efaf39 100%);
+  background-color: #cc7000;
   border-radius: 6px;
   border: none;
   display: inline-block;
   cursor: pointer;
-  color: #ffffff;
+  color: black;
   font-family: Arial;
   font-size: 15px;
   font-weight: bold;
@@ -69,8 +70,8 @@ textarea::placeholder {
 }
 
 .searchButton-form:hover {
-  background: linear-gradient(to bottom, red, blue 100%);
-  background-color: lime;
+  background: linear-gradient(to bottom, #f8df0b, black 100%);
+  background-color: black;
 }
 
 .searchButton-form:active {
