--- a/decouverte-du-miel/src/Components/Header.css
+++ b/decouverte-du-miel/src/Components/Header.css
@@ -12,3 +12,25 @@
   max-width: 30%;
   justify-content: center;
 }
+
+.title {
+  width: 50%;
+  text-align: left;
+  font-size: 60px;
+  font-weight: 700;
+  text-transform: uppercase;
+  max-width: 10%;
+  margin-right: 15%;
+}
+
+li {
+  list-style-type: none;
+  padding: 40px;
+  display: inline-block;
+  margin-left: 50px;
+  font-size: 2em;
+}
+
+a {
+  text-decoration: none;
+}
